Started rearranging repo to add packages

--- a/README
+++ b/README
@@ -8,7 +8,7 @@ INSTALLATION
 RPM/DEB/Ebuild INSTALL ( Recommended )
 ================================
 
-Download and install the package for your distro from https://github.com/simoncadman/libvirt-wakeonlan/downloads .
+Download and install the package for your distro from http://lvwol.niftiestsoftware.com ( coming soon ).
 
 Refer to your own specific distribution instructions for how to install the package. Once installed, the daemon is installed as a standard service, 
 refer to your distribution information on how to start and stop services, and ( if desired ) how to have it run automatically on boot.
@@ -23,6 +23,8 @@ git clone git://github.com/simoncadman/libvirt-wakeonlan.git
 cd libvirt-wakeonlan/
 ./configure
 make install
+
+Run the daemon ( eg. service libvirt-wakeonlan start ).
 
 CONFIGURATION
 =============
