Updated readme and makefile, added better shebang line, renamed script to end in .py

--- a/README
+++ b/README
@@ -33,6 +33,13 @@ libvirt-wakeonlan listens on eth0 by default for Wake-on-lan packets, to change 
 service ( in /etc/conf.d/ on Gentoo, /etc/sysconfig on Fedora and /etc/default on Debian ), within it is a parameter called 
 "LIBVIRTDWOL_INTERFACE" which specifies the interface used. 
 
+DEVELOPING
+==========
+
+Before commiting to the git repository you should set up the pre-commit hook, this ensures the version numbers in the scripts are updated:
+
+ln -s ../../pre-commit.py .git/hooks/pre-commit
+
 Copyright
 =========
 
